1. SCRUM-13 / SCRUM-85 Avalonia - Implement Splash screen
2. SCRUM-107 / SCRUM-104 Styling of buttons

3. Review Points:

3.1. Use TestCases the backing field as we shouldn't directly use the observable property
3.2. Either make "Message" a required field or provide some initial value
3.3. Pick resources from the dictionary and remove hard-coded
3.4. Remove converter warning, apply null to object
3.5. Keep all the resources in dictionary instead of keeping them separate in the app.axaml class
3.6. When the data context is same, why we are firing the command from code-behind? Use bindings.
3.7. In case settings json is null avoid the null exception
3.8. Using these methods Serial Port is only supported on Windows, see and make this support for all the platforms
3.9. Selected protocol should be nullable
3.10. Don’t make DI-injected fields public unless there's a good reason. Also, either use a property (read-only if needed) or private field
3.11. SelectedTestGroup = TestGroups.FirstOrDefault(); this should be out of the loop
3.12. Missing null checks to safe guard the RunTest command
3.13. await the _ = Initialize(); as this can result in error if something crashes in initilaize
3.14. App resize is not working as expected
3.15. Common styles are missing
3.16. There is no user waring message on closing the app

--- a/SBC.WPF/App.axaml
+++ b/SBC.WPF/App.axaml
@@ -7,407 +7,23 @@
 
     <Application.Styles>
         <FluentTheme />
-
-        <!--  App Button  -->
-        <Style Selector="Button.run-style">
-            <Setter Property="Background" Value="#3D79D1" />
-            <Setter Property="Foreground" Value="White" />
-            <Setter Property="BorderThickness" Value="0" />
-            <Setter Property="Cursor" Value="Hand" />
-            <Setter Property="Padding" Value="10,5" />
-            <Setter Property="FontSize" Value="14" />
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-            <Setter Property="HorizontalContentAlignment" Value="Center" />
-            <Setter Property="MinWidth" Value="120" />
-            <Setter Property="Height" Value="30" />
-            <Setter Property="Template">
-                <ControlTemplate>
-                    <Border
-                        Name="border"
-                        Padding="{TemplateBinding Padding}"
-                        Background="{TemplateBinding Background}"
-                        BorderBrush="{TemplateBinding BorderBrush}"
-                        BorderThickness="{TemplateBinding BorderThickness}"
-                        CornerRadius="3">
-                        <ContentPresenter
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            Content="{TemplateBinding Content}"
-                            Foreground="{TemplateBinding Foreground}"
-                            RecognizesAccessKey="True" />
-                    </Border>
-                </ControlTemplate>
-            </Setter>
-        </Style>
-        <!--  Hover  -->
-        <Style Selector="Button.run-style:pointerover">
-            <Setter Property="Background" Value="#3d3dd1" />
-        </Style>
-        <!--  Pressed  -->
-        <Style Selector="Button.run-style:pressed">
-            <Setter Property="Background" Value="#2e2eb8" />
-        </Style>
-        <!--  Disabled  -->
-        <Style Selector="Button.run-style:disabled">
-            <Setter Property="Background" Value="#777" />
-            <Setter Property="Foreground" Value="#ccc" />
-        </Style>
-
-        <Style Selector="Thumb#PART_Thumb">
-            <Setter Property="Template">
-                <ControlTemplate>
-                    <Border
-                        HorizontalAlignment="Stretch"
-                        Background="#3D79D1"
-                        CornerRadius="3" />
-                </ControlTemplate>
-            </Setter>
-        </Style>
-
-
-        <!--  Scroll-bar  -->
-        <Style Selector="ScrollBar[Orientation=Vertical]">
-            <Setter Property="Background" Value="#D9D9D9" />
-
-            <!--  Set ScrollBar width to make it thinner  -->
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="ScrollBar">
-                        <Border
-                            Width="7"
-                            Background="{TemplateBinding Background}"
-                            CornerRadius="5">
-                            <Grid Width="7" Background="Transparent">
-
-
-                                <!--  Track with corner radius and background color  -->
-                                <Track
-                                    Name="PART_Track"
-                                    HorizontalAlignment="Stretch"
-                                    VerticalAlignment="Stretch"
-                                    IsDirectionReversed="True"
-                                    Maximum="{TemplateBinding Maximum}"
-                                    Minimum="{TemplateBinding Minimum}"
-                                    Orientation="Vertical"
-                                    ViewportSize="{TemplateBinding ViewportSize}"
-                                    Value="{TemplateBinding Value}">
-                                    <Track.Thumb>
-                                        <Thumb>
-                                            <Thumb.Template>
-                                                <ControlTemplate TargetType="Thumb">
-
-                                                    <!--  Thumb with corner radius  -->
-                                                    <Border
-                                                        MinHeight="10"
-                                                        Background="#3D79D1"
-                                                        CornerRadius="5" />
-                                                </ControlTemplate>
-                                            </Thumb.Template>
-                                        </Thumb>
-                                    </Track.Thumb>
-                                </Track>
-                            </Grid>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <Style Selector="ScrollBar[Orientation=Horizontal]">
-            <Setter Property="Height" Value="7" />
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="ScrollBar">
-                        <Border Background="{TemplateBinding Background}" CornerRadius="5">
-                            <Track
-                                Name="PART_Track"
-                                HorizontalAlignment="Stretch"
-                                VerticalAlignment="Stretch"
-                                Orientation="Horizontal">
-                                <Track.Thumb>
-                                    <Thumb>
-                                        <Thumb.Template>
-                                            <ControlTemplate TargetType="Thumb">
-                                                <Border Background="#3D79D1" CornerRadius="5" />
-                                            </ControlTemplate>
-                                        </Thumb.Template>
-                                    </Thumb>
-                                </Track.Thumb>
-                                <Thumb Background="Transparent">
-                                    <Thumb.Template>
-                                        <ControlTemplate TargetType="Thumb">
-                                            <Border
-                                                MinHeight="10"
-                                                HorizontalAlignment="Stretch"
-                                                VerticalAlignment="Stretch"
-                                                Background="#3D79D1"
-                                                CornerRadius="5" />
-                                        </ControlTemplate>
-                                    </Thumb.Template>
-                                </Thumb>
-
-                                <!--</Track.Thumb>-->
-                            </Track>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-
-        <!--  Check-box  -->
-        <Style Selector="CheckBox">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="CheckBox">
-                        <Grid ColumnDefinitions="Auto, *">
-                            <Border
-                                x:Name="Border"
-                                Grid.Column="0"
-                                Width="14"
-                                Height="14"
-                                VerticalAlignment="Center"
-                                Background="Transparent"
-                                BorderBrush="Black"
-                                BorderThickness="1"
-                                CornerRadius="2" />
-
-                            <Path
-                                x:Name="CheckMark"
-                                Grid.Column="0"
-                                Margin="3"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                Data="M-2,3 L1,6 L6,1"
-                                IsVisible="{TemplateBinding IsChecked}"
-                                Stroke="White"
-                                StrokeThickness="1.5" />
-
-                            <ContentPresenter
-                                Grid.Column="1"
-                                Margin="6,0,0,0"
-                                HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
-                                VerticalAlignment="Center"
-                                HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                Content="{TemplateBinding Content}"
-                                FontWeight="{TemplateBinding FontWeight}"
-                                Foreground="{TemplateBinding Foreground}" />
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <!--  Checked state: set background  -->
-        <Style x:SetterTargetType="Border" Selector="CheckBox:checked /template/ #Border">
-            <Setter Property="Background" Value="#3D79D1" />
-            <Setter Property="BorderThickness" Value="0" />
-        </Style>
-
-        <Style x:SetterTargetType="Path" Selector="CheckBox:checked /template/ #CheckMark">
-            <Setter Property="IsVisible" Value="True" />
-        </Style>
-
-        <!--  Indeterminate state: set background  -->
-        <Style x:SetterTargetType="Border" Selector="CheckBox:indeterminate /template/ #Border">
-            <Setter Property="Background" Value="#3D79D1" />
-            <Setter Property="BorderThickness" Value="0" />
-        </Style>
-
-        <!--  Indeterminate state: show custom mark  -->
-        <Style x:SetterTargetType="Path" Selector="CheckBox:indeterminate /template/ #CheckMark">
-            <Setter Property="IsVisible" Value="True" />
-            <Setter Property="Data" Value="M-1,1 L5,1 L5,7 L-1,7 Z" />
-        </Style>
-
-
-        <!--  Combo-box  -->
-        <Style Selector="ComboBox">
-            <Setter Property="Foreground" Value="Black" />
-            <Setter Property="Background" Value="White" />
-            <Setter Property="Height" Value="20" />
-            <Setter Property="BorderBrush" Value="#3D79D1" />
-            <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="Padding" Value="4,2" />
-            <Setter Property="FontSize" Value="12" />
-            <Setter Property="Width" Value="250" />
-            <Setter Property="Template">
-                <ControlTemplate TargetType="ComboBox">
-                    <Grid>
-
-                        <!--  Main Border  -->
-                        <Border
-                            Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}">
-                            <DockPanel>
-                                <!--  Selected Item Content  -->
-                                <ContentPresenter
-                                    Name="ContentSite"
-                                    Margin="5,3,25,3"
-                                    HorizontalAlignment="Left"
-                                    VerticalAlignment="Center"
-                                    Content="{TemplateBinding SelectedItem}"
-                                    ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}"
-                                    IsHitTestVisible="False" />
-
-                                <!--  Dropdown Arrow  -->
-                                <Canvas
-                                    Width="16"
-                                    Height="16"
-                                    Margin="0,0,5,0"
-                                    HorizontalAlignment="Right"
-                                    VerticalAlignment="Bottom"
-                                    DockPanel.Dock="Bottom">
-                                    <Path
-                                        HorizontalAlignment="Center"
-                                        VerticalAlignment="Center"
-                                        Data="M 0 0 L 5 5 L 10 0"
-                                        Stretch="Uniform"
-                                        Stroke="#3D79D1"
-                                        StrokeThickness="2" />
-                                </Canvas>
-                            </DockPanel>
-                        </Border>
-
-                        <!--  Popup Menu  -->
-                        <Popup
-                            Name="PART_Popup"
-                            Focusable="True"
-                            IsOpen="{TemplateBinding IsDropDownOpen}"
-                            Placement="Bottom">
-                            <Border
-                                MinWidth="270"
-                                MaxHeight="200"
-                                Background="White"
-                                BorderBrush="#3D79D1"
-                                BorderThickness="1">
-                                <ScrollViewer>
-                                    <ItemsPresenter />
-                                </ScrollViewer>
-                            </Border>
-                        </Popup>
-                    </Grid>
-                </ControlTemplate>
-            </Setter>
-        </Style>
-
-        <!--  Hover  -->
-        <Style x:SetterTargetType="Border" Selector="ComboBoxItem:pointerover /template/ #border">
-            <Setter Property="Background" Value="#FFE59F" />
-        </Style>
-
-        <!--  Selected  -->
-        <Style x:SetterTargetType="Border" Selector="ComboBoxItem:checked /template/ #border">
-            <Setter Property="Background" Value="#F9C449" />
-            <!--<Setter Property="Width" Value="240" />-->
-        </Style>
-
-        <!--  Foreground when selected  -->
-        <Style x:SetterTargetType="ComboBoxItem" Selector="ComboBoxItem:checked">
-            <Setter Property="Foreground" Value="Black" />
-        </Style>
-
-        <Style x:SetterTargetType="ComboBoxItem" Selector="ComboBoxItem:focus">
-            <Setter Property="Foreground" Value="Black" />
-            <Setter Property="BorderBrush" Value="#3D79D1" />
-        </Style>
-
-        <Style x:SetterTargetType="ComboBoxItem" Selector="ComboBoxItem:pointerover">
-            <Setter Property="Foreground" Value="Black" />
-        </Style>
-
-        <Style x:SetterTargetType="ComboBoxItem" Selector="ComboBoxItem:selected">
-            <Setter Property="Foreground" Value="Black" />
-        </Style>
-
-
-        <!--  Textblock  -->
-        <Style Selector="TextBlock">
-            <Setter Property="Foreground" Value="Black" />
-        </Style>
-
-
-        <!--  Textbox  -->
-        <Style Selector="TextBox.myStyled">
-            <Setter Property="Background" Value="White" />
-            <Setter Property="Foreground" Value="Black" />
-            <Setter Property="BorderBrush" Value="#3D79D1" />
-            <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="CornerRadius" Value="0" />
-            <Setter Property="Padding" Value="4" />
-            <Setter Property="FontSize" Value="14" />
-            <Setter Property="Width" Value="250" />
-            <Setter Property="CaretBrush" Value="Black" />
-        </Style>
-
-        <!--  Target the Border inside template to apply visual styles  -->
-        <Style x:SetterTargetType="Border" Selector="TextBox.myStyled /template/ Border">
-            <Setter Property="Background" Value="White" />
-            <Setter Property="BorderBrush" Value="#3D79D1" />
-        </Style>
-
-        <!--  Hover  -->
-        <Style x:SetterTargetType="Border" Selector="TextBox.myStyled:pointerover /template/ Border">
-            <Setter Property="BorderBrush" Value="#3D79D1" />
-        </Style>
-
-        <!--  Focus  -->
-        <Style x:SetterTargetType="Border" Selector="TextBox.myStyled:focus /template/ Border">
-            <Setter Property="BorderBrush" Value="#3D79D1" />
-        </Style>
-
-        <!--  Hover Foreground  -->
-        <Style Selector="TextBox.myStyled:pointerover">
-            <Setter Property="Foreground" Value="Black" />
-        </Style>
-
-        <Style Selector="TextBox.myStyled:focus">
-            <Setter Property="Background" Value="White" />
-            <Setter Property="Foreground" Value="Black" />
-        </Style>
-
-
-        <!--  MenuItem  -->
-        <!--  Default MenuItem style  -->
-        <Style Selector="MenuItem">
-            <Setter Property="Background" Value="Transparent" />
-            <Setter Property="Foreground" Value="Black" />
-            <Setter Property="Padding" Value="8,4" />
-        </Style>
-
-        <!--  Only change text color on hover  -->
-        <Style x:SetterTargetType="MenuItem" Selector="MenuItem:pointerover">
-            <Setter Property="Foreground" Value="#3D79D1" />
-        </Style>
-
-        <!--  Selected/active (if used)  -->
-        <Style x:SetterTargetType="MenuItem" Selector="MenuItem:pressed">
-            <Setter Property="Foreground" Value="#3D79D1" />
-        </Style>
-
-        <!--  Disabled look  -->
-        <Style x:SetterTargetType="MenuItem" Selector="MenuItem:disabled">
-            <Setter Property="Foreground" Value="#999999" />
-        </Style>
-
-        <!--  Button Fly-out  -->
-        <Style Selector="FlyoutPresenter">
-            <Setter Property="Background" Value="White" />
-            <Setter Property="BorderBrush" Value="White" />
-            <Setter Property="BorderThickness" Value="0" />
-            <Setter Property="Padding" Value="4" />
-            <Setter Property="CornerRadius" Value="6" />
-        </Style>
-
+		
+        <StyleInclude Source="Resources/Styles/ButtonStyles.axaml" />
+        <StyleInclude Source="Resources/Styles/ScrollBarStyles.axaml" />
+        <StyleInclude Source="Resources/Styles/CheckBoxStyles.axaml" />
+        <StyleInclude Source="avares://SBC.WPF/Resources/Styles/ComboBoxStyles.axaml" />
+		<StyleInclude Source="avares://SBC.WPF/Resources/Styles/TextBoxStyles.axaml" />
+		<StyleInclude Source="avares://SBC.WPF/Resources/Styles/TextBlockStyles.axaml" />
+        <StyleInclude Source="avares://SBC.WPF/Resources/Styles/ButtonFlyoutMenuItemsStyles.axaml" />
     </Application.Styles>
 
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceInclude Source="/Resources/Icons.axaml" />
-                <ResourceInclude Source="/Resources/Styles.axaml" />
-                <ResourceInclude Source="/Resources/LightTheme.axaml" />
+                <ResourceInclude Source="/Resources/ResourceDictionary/Icons.axaml" />
+                <ResourceInclude Source="/Resources/ResourceDictionary/Styles.axaml" />
+                <ResourceInclude Source="/Resources/ResourceDictionary/LightTheme.axaml" />
+                <ResourceInclude Source="/Resources/ResourceDictionary/ScrollBar.axaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
